--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@ Author URL: http://w3layouts.com
             <div class="row">
                 <div class="col-lg-6 mt-lg-0 mt-lg-5 about-right-faq align-self">
                     <h5 class="title-small mb-2">ISTE STUDENT CHAPTER PRESENTS PIONEER 2025</h5>
-                    <h3 class="title-banner">Welcome to the  28th year of  <span> PIONEER !</span></h3>
-                    <p class="mt-4"> A National Level Technical Event by KIT's College of Engineering (Autonomous) , Kolhapur.</p>
+                    <h3 class="title-banner">Welcome to the  28th edition of  <span> PIONEER !</span></h3>
+                    <p class="mt-4"> A National Level Technical Event by KIT's College of Engineering (Empowered Autonomous) , Kolhapur.</p>
                       
                  </div>
                 <div class="col-md-6 left-wthree-img mt-lg-0 mt-4">
