--- a/index.html
+++ b/index.html
@@ -272,11 +272,11 @@ Author URL: http://w3layouts.com
                 </div>
             </div>
             <div class="col-lg-6 mt-lg-0 mt-4 text-center" >
-                <img src="PIONEER 2024_POSTER 12x18 2.webp" class="img-fluid radius-image" alt="">
+                <img src="PIONEER 2025_POSTER 12x18_FINAL.pdf" class="img-fluid radius-image" alt="">
                 <br>
 
               
-                <a href="PIONEER 2024_POSTER 12x18 2.webp" download>
+                <a href="PIONEER 2025_POSTER 12x18_FINAL.pdf" download>
                   <button class=" btn btn-style btn-primary mt-md-5 mt-4 text-center "><i class="fa fa-download"></i> Download The Poster</button>
                 </a>
             </div>
