--- a/index.html
+++ b/index.html
@@ -458,8 +458,8 @@ Author URL: http://w3layouts.com
       <div class="row footer-top-29">
         <div class="col-lg-4 col-md-6 footer-list-29 footer-1">
           <h6 class="footer-title-29">About Us</h6>
-          <p>PIONEER, a National-level technical event organised by KITCoEK under ISTE (Indian Society for Technical Education). The Pioneer, in its 28th edition, stands as the flagship event of KITCoEK with a rich legacy spanning over 27 years. Two central events are Abhivyati and Prakalp.
-Along with two central events, Pioneer features nine departmental events, each meticulously organized by different departmental student associations.</p>
+          <p>PIONEER, a National-level technical event organised by KITCoEK under ISTE (Indian Society for Technical Education). The Pioneer, in its 28th edition, stands as the flagship event of KITCoEK with a rich legacy spanning over 27 years. Three central events are Abhivyati ,Prakalp and Battle Blitz.
+Along with three central events, Pioneer features nine departmental events, each meticulously organized by different departmental student associations.</p>
          
         </div>
         <div class="col-lg-4 col-md-6 footer-list-29 footer-2 mt-md-0 mt-5">
