--- a/index.html
+++ b/index.html
@@ -308,12 +308,12 @@ Author URL: http://w3layouts.com
          <div class="col-lg-12 mx-auto">
               <div class="owl-logos owl-carousel owl-theme logo-view" id="sponsors">
                 <div class="item">
-                    <img src="images/sponsors/1.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="sponsors/1.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/2.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="sponsors/2.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
