--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ Author URL: http://w3layouts.com
                 </div>
             </div>
             <div class="col-lg-6 mt-lg-0 mt-4 text-center" >
-                <img src="PIONEER 2025_POSTER 12x18_FINAL.pdf" class="img-fluid radius-image" alt="">
+                <img src="pioneerposter.jpg" class="img-fluid radius-image" alt="">
                 <br>
 
               
