--- a/index.html
+++ b/index.html
@@ -302,13 +302,13 @@ Author URL: http://w3layouts.com
 
   <div class="container py-lg-3">
     
-      <h3 class="title-big mb-md-5 mb-4 text-center">Sponsors</h3>
+      <h3 class="title-big mb-md-5 mb-4 text-center">Out Proud Sponsors 2024</h3>
      
       <div class="row">
          <div class="col-lg-12 mx-auto">
               <div class="owl-logos owl-carousel owl-theme logo-view" id="sponsors">
                 <div class="item">
-                    <img src="sponsors/1.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/1.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
@@ -318,87 +318,87 @@ Author URL: http://w3layouts.com
 
 
                 <div class="item">
-                    <img src="images/sponsors/3.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/3.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/4.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/4.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/5.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/5.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/6.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/6.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/7.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/7.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/8.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/8.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/9.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/9.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/10.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/10.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/11.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/11.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/12.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/12.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/13.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/13.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/14.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/14.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/15.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/15.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/16.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/16.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/17.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/17.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/18.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/18.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/19.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/19.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
@@ -408,42 +408,42 @@ Author URL: http://w3layouts.com
 
 
                 <div class="item">
-                    <img src="images/sponsors/21.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/21.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/22.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/22.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/23.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/23.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/24.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/24.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/25.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/25.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/26.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/26.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/27.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/27.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
 
 
                 <div class="item">
-                    <img src="images/sponsors/28.webp" alt="company-logo radius-image" class="img-fluid">
+                    <img src="/images/sponsors/28.webp" alt="company-logo radius-image" class="img-fluid">
                 </div>
               </div>
           </div>
