--- a/index.html
+++ b/index.html
@@ -302,7 +302,7 @@ Author URL: http://w3layouts.com
 
   <div class="container py-lg-3">
     
-      <h3 class="title-big mb-md-5 mb-4 text-center">Out Proud Sponsors 2024</h3>
+      <h3 class="title-big mb-md-5 mb-4 text-center">Our Proud Sponsors 2024</h3>
      
       <div class="row">
          <div class="col-lg-12 mx-auto">
