--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ Author URL: http://w3layouts.com
                     </div>
                 </div>
             </div>
-            <div class="col-lg-6 mt-lg-0 mt-4 text-center" >
+            <div class="col-lg-6 mt-lg-0 mt-4 text-center poster" >
                 <img src="pioneerposter.jpg" class="img-fluid radius-image" alt="">
                 <br>
 
