--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ Author URL: http://w3layouts.com
     <div class="container py-lg-5 py-4">
         <div class="row">
             <div class="col-lg-6 align-self">
-                <h3 class="title-big mb-4"> Time to ignite your brain and polish your competing skills! </h3>
+                <h3 class="title-big mb-4 text1"> Time to ignite your brain and polish your competing skills! </h3>
                 <p class="">Take part in the amazing fun events and stand a chance to win exciting cash prizes </p>
                 <div class="row mt-sm-4 mt-2 px-3">
                     
