--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Author URL: http://w3layouts.com
   <div class="container">
       <nav class="navbar navbar-expand-lg stroke">
           <a class="navbar-brand" href="index.html">
-              <span class=""></span> PIONEER
+             <p class="glowing-text fancy-shadow">PIONEER</p>
           </a>
           <!-- if logo is image enable this   
       <a class="navbar-brand" href="#index.html">
