--- a/event.html
+++ b/event.html
@@ -51,7 +51,7 @@
         <p>&copy; 2025 Tech Festival | All Rights Reserved</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 
 </body>
 </html>
