--- a/event.html
+++ b/event.html
@@ -49,6 +49,6 @@
         <p>&copy; 2025 Pioneer 2k25. All Rights Reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="Script.js"></script>
 </body>
 </html>
