--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@ Author URL: http://w3layouts.com
     <!-- Google fonts -->
     
 	<link href="//fonts.googleapis.com/css?family=Cabin:400,500,600&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-    
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
     <link rel="stylesheet" href="assets/css/style-about.css">
