--- a/event.html
+++ b/event.html
@@ -125,7 +125,7 @@
                   <p class="card_text">Free fire<br><b>Prizes: <br>upto - <span>&#8377;</span> 20,000</b></p>
                   <p class="card_text">Registration Fee: <span>&#8377;</span> 600 per squad.</p>
                   <a href="https://rzp.io/rzp/CWQC6gx1"><button class="btn card_btn">Register</button></a><br>
-                  <a href="game.svg"><button class="btn card_btn"> See More</button></a>
+                  <a href="Game.svg"><button class="btn card_btn"> See More</button></a>
                 </div>
               </div>
             </li>
