--- a/Prakalp.html
+++ b/Prakalp.html
@@ -83,7 +83,7 @@
    
    
   <br>
-    <center><img src="pioneerposter.jpg" width="auto" height="auto"></center><br>    
+    <center><img src="pioneerposter.jpg" width="50%" height="50%"></center><br>    
     
     <br>
        
