--- a/event.html
+++ b/event.html
@@ -119,13 +119,13 @@
             </li> 
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="paper.png" alt="Battle Blitzz"></div>
+                <div class="card_image"><img src="Game.svg" alt="Battle Blitzz"></div>
                 <div class="card_content">
                   <h2 class="card_title">BATTLE BLITZZ</h2>
                   <p class="card_text">Free fire<br><b>Prizes: <br>upto - <span>&#8377;</span> 20,000</b></p>
                   <p class="card_text">Registration Fee: <span>&#8377;</span> 600 per squad.</p>
                   <a href="https://rzp.io/rzp/CWQC6gx1"><button class="btn card_btn">Register</button></a><br>
-                  <a href="Game.svg"><button class="btn card_btn"> See More</button></a>
+                  <a href="Battle Blitzz.html"><button class="btn card_btn"> See More</button></a>
                 </div>
               </div>
             </li>
