--- a/event.html
+++ b/event.html
@@ -95,7 +95,7 @@
           <ul class="cards">
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="paper.png" alt="Abhivyakti"></div>
+                <div class="card_image"><img src="Abhivyakti.svg" alt="Abhivyakti"></div>
                 <div class="card_content">
                   <h2 class="card_title">ABHIVYAKTI</h2>
                   <p class="card_text">Paper Presentation Competition<br><b>Prizes: <br>1st: <span>&#8377;</span> 15000 <br>2nd: <span>&#8377;</span> 10000 <br>3rd: <span>&#8377;</span> 5000 <br></b></p>
@@ -107,7 +107,7 @@
             </li>
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="project.png" alt="Prakalp"></div>
+                <div class="card_image"><img src="prakalp.svg" alt="Prakalp"></div>
                 <div class="card_content">
                   <h2 class="card_title">PRAKALP</h2>
                   <p class="card_text">A Project Competition<br><b>Prizes: <br> 1st: <span>&#8377;</span>10,000 <br>2nd: <span>&#8377;</span> 7500 <br>3rd: <span>&#8377;</span>5000 <br></b></p>
