--- a/event.html
+++ b/event.html
@@ -107,7 +107,7 @@
             </li>
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="prakalp.svg" alt="Prakalp"></div>
+                <div class="card_image"><img src="Prakalp.svg" alt="Prakalp"></div>
                 <div class="card_content">
                   <h2 class="card_title">PRAKALP</h2>
                   <p class="card_text">A Project Competition<br><b>Prizes: <br> 1st: <span>&#8377;</span>10,000 <br>2nd: <span>&#8377;</span> 7500 <br>3rd: <span>&#8377;</span>5000 <br></b></p>
