--- a/event.html
+++ b/event.html
@@ -124,7 +124,7 @@
                   <h2 class="card_title">BATTLE BLITZZ</h2>
                   <p class="card_text">Free fire<br><b>Prizes: <br>upto - <span>&#8377;</span> 20,000</b></p>
                   <p class="card_text">Registration Fee: <span>&#8377;</span> 600 per squad.</p>
-                  <a href="https://rzp.io/rzp/CWQC6gx1"><button class="btn card_btn">Register</button></a><br>
+                  <a href="https://pages.razorpay.com/pl_Pm3dpfBR7mCTAm/view"><button class="btn card_btn">Register</button></a><br>
                   <a href="BattleBlitzz.html"><button class="btn card_btn"> See More</button></a>
                 </div>
               </div>
