--- a/event.html
+++ b/event.html
@@ -8,7 +8,7 @@
     <title>PIONEER </title>
     <!-- Google fonts --> 
 	<link href="//fonts.googleapis.com/css?family=Cabin:400,500,600&amp;subset=latin-ext,vietnamese" rel="stylesheet">
-    
+    	  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <!-- Template CSS -->
     <link rel="stylesheet" href="assets/css/style-starter.css">
     <link rel="stylesheet" href="assets/css/style-event.css">
@@ -36,6 +36,66 @@
       }
       .navbar-nav .nav-link {
         color: white !important;
+      }
+	       /* General Footer Styling */
+      .footer-section {
+        background-color: #333;
+        padding: 40px 0;
+        color: #fff;
+      }
+
+      .footer-title-29 {
+        font-size: 18px;
+        margin-bottom: 15px;
+        font-weight: bold;
+      }
+
+      .footer-list-29 ul {
+        list-style: none;
+        padding: 0;
+      }
+
+      .footer-list-29 ul li {
+        margin: 10px 0;
+      }
+
+      .footer-list-29 ul li a {
+        color: #ddd;
+        text-decoration: none;
+      }
+
+      .footer-list-29 ul li a:hover {
+        color: #f8b400;
+      }
+
+      /* Card Separation Styles */
+      .card {
+        border: 1px solid #ddd;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        margin: 20px;
+        padding: 20px;
+        transition: transform 0.3s;
+      }
+
+      .card:hover {
+        transform: translateY(-5px);
+      }
+
+      /* Responsive Media Queries */
+      @media (max-width: 768px) {
+        .footer-list-29 {
+          text-align: center;
+        }
+
+        .footer-list-29 ul {
+          padding: 0;
+        }
+      }
+
+      @media (max-width: 576px) {
+        .footer-section {
+          padding: 20px 0;
+        }
       }
     </style>
   </head>
