--- a/event.html
+++ b/event.html
@@ -155,7 +155,7 @@
           <ul class="cards">
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="Abhivyakti.svg" alt="Abhivyakti"></div>
+                <div class="card_image"><img src="Abhivyakti.svg" alt="Abhivyakti" width="100%" height="100%"></div>
                 <div class="card_content">
                   <h2 class="card_title">ABHIVYAKTI</h2>
                   <p class="card_text">Paper Presentation Competition<br><b>Prizes: <br>1st: <span>&#8377;</span> 15000 <br>2nd: <span>&#8377;</span> 10000 <br>3rd: <span>&#8377;</span> 5000 <br></b></p>
