--- a/event.html
+++ b/event.html
@@ -97,6 +97,12 @@
           padding: 20px 0;
         }
       }
+	    @media (min-width:992px){
+		    .footer-list-29 ul{
+			    display:flex;
+			    gap: 20px;
+		    }
+	    }
     </style>
   </head>
   <body>
