--- a/event.html
+++ b/event.html
@@ -173,7 +173,7 @@
             </li>
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="Prakalp.svg" alt="Prakalp"></div>
+                <div class="card_image"><img src="Prakalp.svg" alt="Prakalp" width="100%" height="100%"></div>
                 <div class="card_content">
                   <h2 class="card_title">PRAKALP</h2>
                   <p class="card_text">A Project Competition<br><b>Prizes: <br> 1st: <span>&#8377;</span>10,000 <br>2nd: <span>&#8377;</span> 7500 <br>3rd: <span>&#8377;</span>5000 <br></b></p>
@@ -185,7 +185,7 @@
             </li> 
             <li class="cards_item1">
               <div class="card">
-                <div class="card_image"><img src="Game.svg" alt="Battle Blitzz"></div>
+                <div class="card_image"><img src="Game.svg" alt="Battle Blitzz" width="100%" height="100%"></div>
                 <div class="card_content">
                   <h2 class="card_title">BATTLE BLITZZ</h2>
                   <p class="card_text">Free fire<br><b>Prizes: <br>upto - <span>&#8377;</span> 20,000</b></p>
