--- a/about.html
+++ b/about.html
@@ -549,6 +549,7 @@ Author URL: http://w3layouts.com
 </script>
 <!--//MENU-JS-->
 <script src="assets/js/bootstrap.min.js"></script>
+	  <script src="about-script.js"></script>
 </body>
 
 </html>
