--- a/index.html
+++ b/index.html
@@ -102,16 +102,17 @@ Author URL: http://w3layouts.com
     <div class="gallery-container">
       <div class="gallery-wrapper">
         <!-- Images -->
-        <img src="image1.jpg" alt="Photo 1" class="gallery-image">
-        <img src="image2.jpg" alt="Photo 2" class="gallery-image">
-        <img src="image3.jpg" alt="Photo 3" class="gallery-image">
-        <img src="image4.jpg" alt="Photo 4" class="gallery-image">
-        <img src="image5.jpg" alt="Photo 5" class="gallery-image">
-        <img src="image6.jpg" alt="Photo 6" class="gallery-image">
-        <img src="image7.jpg" alt="Photo 7" class="gallery-image">
-        <img src="image8.jpg" alt="Photo 8" class="gallery-image">
-        <img src="image9.jpg" alt="Photo 9" class="gallery-image">
-        <img src="image10.jpg" alt="Photo 10" class="gallery-image">
+        <img src="images/image1.webp" alt="Photo 1" class="gallery-image">
+        <img src="images/image2..webp" alt="Photo 2" class="gallery-image">
+        <img src="images/image3.webp" alt="Photo 3" class="gallery-image">
+        <img src="images/image4.webp" alt="Photo 4" class="gallery-image">
+        <img src="images/image5.webp" alt="Photo 5" class="gallery-image">
+        <img src="images/image6.webp" alt="Photo 6" class="gallery-image">
+        <img src="images/image7.webp" alt="Photo 7" class="gallery-image">
+        <img src="images/image8..webp" alt="Photo 8" class="gallery-image">
+        <img src="images/image9.jpg" alt="Photo 9" class="gallery-image">
+        <img src="images/image10.webp" alt="Photo 10" class="gallery-image">
+	<img src="images/image11.webp" alt="Photo 11" class="gallery-image">
       </div>
 
     
